--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,21 @@
   "manifest_version": 2,
 
   "name": "Commentir",
-  "description": "Social Commenting in real time with Facebook friends on youtube.",
+  "description": "Social Commenting in real time with Facebook friends and Twitter Followers on youtube.",
   "version": "1.0",
 
-  "browser_action": {
-  },
   "permissions": [
+    "tabs","activeTab"
+  ],
+
+  "browser_action": {
+    "default_icon": "icon.png"
+  },
+
+  "content_scripts": [
+    {
+      "matches": ["http://www.youtube.com/watch?v=*"],
+      "js": ["jquery.min.js","commentir.js"]
+    }
   ]
 }
