--- a/manifest.json
+++ b/manifest.json
@@ -24,5 +24,5 @@
 
   "content_security_policy": "script-src 'self' https://cdn.firebase.com https://*.firebaseio.com https://ajax.googleapis.com; object-src 'self'",
 
-  "web_accessible_resources": ["comment.js"]
+  "web_accessible_resources": ["comment.js","buttons.js","jquery.min.js"]
 }
